# heurisko

./: .gitignore  Cargo.toml  README.md
config/: config.toml  stop_words.txt  word_endings.txt
python/: main.py
src/: app_config.rs  cli.rs  convert.rs  host.rs  hsk_file.rs  main.rs  main.rs.bak  merge.rs  searcher.rs  utils.rs  word_id.rs
src/input_files/: mod.rs  sbv.rs  srt.rs  whisper.rs  whisperx.rs  youtube.rs
