[package]
name = "heurisko"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
zstd = "0.13.2"
walkdir = "2.5.0"
config = "0.15.6"
directories = "6.0.0"
once_cell = "1.20.2"
rocket = "0.5.1"
regex = "1.11.1"
cached = "0.54.0"
